import Foundation

enum A11yID {
    enum Auth {
        static let authenticateButton = "Authenticate"
        static let webView = "UnsplashWebView"
        static let loginButton = "Login"
        static let loginAltButton = "Log in"
    }

    enum Feed {
        static let table = "ImagesTable"
        static let likeButton = "LikeButton"
        static let fullImage = "SingleImageView"
    }

    enum Profile {
        static let name = "ProfileName"
        static let login = "ProfileLogin"
        static let bio = "ProfileBio"
        static let logout = "Logout"
    }
}

