...
        label.textColor = .white
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }()
    
    private let exitButton: UIButton = {
        let button = UIButton.systemButton(
                    with: UIImage(systemName: "ipad.and.arrow.forward")!,
                    target: self,
                    action: #selector(Self.didTapButton)
                )
        button.tintColor = UIColor(named: "YP Red")
        button.translatesAutoresizingMaskIntoConstraints = false
...
